@@ -60,6 +60,7 @@ enum {
 	COL_TASK,
 	COL_COST,
 	COL_ASSIGNED_TO,
+	COL_COMPLETE,
 	NUM_COLS
 };
 
