@@ -1,3 +1,13 @@
+2008-02-27  Kurt Maute  <kurt@maute.us>
+	* src/planner-task-tree.c
+	* src/planner-gantt-model.c
+	* src/planner-gantt-model.h
+	* src/planner-task-view.c:
+	Patch to add % complete column to task view.  Original patch by Robert
+	Mibus, enhanced by me to allow edit of the % complete column in task
+	view.  Bug # 379975
+
+
 2008-02-15  Maurice van der Pot  <griffon26@kfk4ever.com>
 
 	* src/planner-task-tree.c: (planner_task_tree_indent_task),
